# MLP

./: README.md
src/: CMakeLists.txt  Experiment.md  Makefile  tests.out
src/application/MLP.app/Contents/: Info.plist
src/controller/: controller.cpp  controller.h
src/matrix/: s21_matrix.cpp  s21_matrix_oop.h  s21_support_func.cpp
src/model/: emnist_reader.cpp  emnist_reader.h  graph_network.cpp  matrix_network.cpp  network.h  train_net.cpp
src/model/testdir/: main_test.cpp
src/qrc/: src.qrc
src/view/: main.cpp  main_window.cpp  main_window.h  main_window.ui  render_scene.cpp  render_scene.h  settings_window.cpp  settings_window.h  settings_window.ui  test_window.cpp  test_window.h  test_window.ui  train_window.cpp  train_window.h  train_window.ui
